# slides2video

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  build.sh  dvc.yaml  manifest.xml  package-lock.json  package.json  packages.txt  params.yaml  pyproject.toml  requirements.txt  run.sh  streamlit_app.py
src/: __about__.py  api-key-instructions.html  assemble_video.py  check.py  create_silent_audio.sh  extract_notes.py  files.js  generate_videoclips.py  pdf2png.py  pptx2pdf.py  text2speech.py
workingdir/: .gitignore
